--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     Hai this is vineeth
+
+    <h1>Jai Balayya</h1>
+    <p style="color: blue;"> This is BLUE</style></p>
 </body>
 </html>
