UPDATE DETAILS OF PROJRCT

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
     Hai this is vineeth
 
-<h1>Jai Balayya</h1>
+ <h1>Jai Balayya</h1>
     <p style="color: blue;"> This is BLUE</style></p>
+
+    I am learning HTML & CSS 
 </body>
 </html>
 
